--- a/xwiki-glimpse-server/pom.xml
+++ b/xwiki-glimpse-server/pom.xml
@@ -20,17 +20,17 @@
     <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-rest-server</artifactId>
-      <version>3.2-SNAPSHOT</version>
+      <version>${xwiki.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xwiki.commons</groupId>
       <artifactId>xwiki-commons-component-default</artifactId>
-      <version>3.2-SNAPSHOT</version>
+      <version>${xwiki.version}</version>
     </dependency>
     <dependency>
       <groupId>org.xwiki.commons</groupId>
       <artifactId>xwiki-commons-script</artifactId>
-      <version>3.2-SNAPSHOT</version>
+      <version>${xwiki.version}</version>
     </dependency>
   </dependencies>
 </project>
